gateway/1.13/modules/ROOT/pages/flex-gateway-llm-proxy-policies.adoc
= LLM Proxy Policies 
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-notice-banner-message: Use the enhanced MuleSoft experience to secure and monitor services across providers, apply governance policies, and manage LLM usage, costs, and routing with consistent governance across models. <a href="https://docs.mulesoft.com/general/exp-instances-add" target="_blank" rel="noopener">Learn more.</a>

By default, LLM Proxy applies these policies:

* Client ID Enforcement
* xref:policies-included-llm-proxy-core.adoc[LLM Proxy Core Policy]
* Model Based Routing Policy or Semantic Routing Policy (policy name dependent on embedded service provider)

You don't need to modify these policies.

LLM Proxy supports most xref:policies-included-directory.adoc[included policies], but doesn't support outbound policies.

NOTE: LLM Proxy doesn't support xref:policies-included-rate-limiting-sla.adoc[].

These policies are specific and useful for LLM Proxies:

* xref:policies-included-llm-proxy-core.adoc[]
* xref:policies-included-bedrock-guardrails.adoc[]
* xref:policies-included-azure-content-safety.adoc[]
* xref:policies-included-llm-pii-detection.adoc[]
* xref:policies-included-llm-token-rate-limit.adoc[]
* xref:policies-included-regex-prompt-guard.adoc[]

== Apply Policies to LLM Proxies

. From API Manager, click *LLM Proxies*.
. Click the name of the LLM Proxy you want to apply a policy to.
. Click *AI Policies*.
. Click *+ Add inbound policy*.
. Select the policy to apply.
. Configure the required parameters.
+
For policy configuration parameters, see xref:policies-included-directory.adoc[].
. If necessary, configure *Advanced options*.
. Click *Apply*.

== LLM Proxy Authentication Policy

By default, the LLM Proxy has the Client ID Enforcement policy applied.
This is required because the Client ID Enforcement populates the `Authentication.clientName` variable in the `Authentication` object that is used by the xref:policies-included-llm-proxy-core.adoc[LLM Proxy Core Policy] as a unique identifier for LLM Metrics.

To remove the Client ID Enforcement policy, ensure that you either:

* Apply a policy that populates `Authentication.clientName`:
+
** xref:policies-included-client-id-enforcement.adoc[]
** xref:policies-included-rate-limiting-sla.adoc[]
** xref:policies-included-oauth-token-introspection.adoc[] (If Client ID enforcement is configured, `skipClientIdValidation=false`)
** xref:policies-included-openid-token-enforcement.adoc[] (If Client ID enforcement is configured, `skipClientIdValidation=false`)
** xref:policies-included-jwt-validation.adoc[] (If Client ID enforcement is configured, `skipClientIdValidation=false`)
** A custom policy that populates `Authentication.clientName`

* Edit the `Client Identifier` parameter in the xref:policies-included-llm-proxy-core.adoc[LLM Proxy Core Policy] to extract a different unique identifier, such as `#[attributes.headers['client-id']]`, `#[attributes.headers['user-id']]`, or `#[attributes.headers['department-id']]`.
+
NOTE: You can't filter by this unique identifier in Usage Reports.

== See Also

* xref:flex-gateway-secure-apis.adoc[]
* xref:policies-included-directory.adoc[]
